# Sorting_Robot_Arm

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/orange_robot/lib/orange_robot/: angles_calculator_service  arduino_commander_action  arduino_monitor  camera_publisher  maturity_detector_service  serial_servo_service  state_controller
install/orange_robot/share/orange_robot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/orange_robot/share/orange_robot/launch/: orange_robot.launch.py
install/orange_robot_interfaces/include/orange_robot_interfaces/orange_robot_interfaces/srv/: calculate_angles.h  (+1 more)
install/orange_robot_interfaces/share/orange_robot_interfaces/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/orange_robot_interfaces/share/orange_robot_interfaces/action/: ExecuteSequence.idl
install/orange_robot_interfaces/share/orange_robot_interfaces/cmake/: ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_orange_robot_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_orange_robot_interfaces__rosidl_generator_pyExport.cmake  export_orange_robot_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_orange_robot_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_orange_robot_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  orange_robot_interfacesConfig.cmake  orange_robot_interfaces__rosidl_typesupport_cExport.cmake  rosidl_cmake-extras.cmake
install/orange_robot_interfaces/share/orange_robot_interfaces/srv/: CalculateAngles.idl
log/: latest_build
src/orange_robot/: setup.cfg  setup.py
src/orange_robot/orange_robot/: Arduino_sketch.txt  angles_calculator.txt  arduino_commander_action.py  arduino_commander_action.txt  serial.txt  space.txt  state_controller.py  state_controller.txt
src/orange_robot_interfaces/: CMakeLists.txt  package.xml
src/orange_robot_interfaces/srv/: CalculateAngles.srv
(+21 files in other folders)
